   when MANIFEST is created. [Spotted by Ron Savage]

 - Added some additional patterns to the suggested MANIFEST.SKIP
   contents, and changed the docs so that we encourage the user to use
   the MANIFEST.SKIP.  [Ron Savage]

 - Eliminated a redundant recipe from the Cookbook, now that there are
   some more extensive recipes on how to add stuff to the
   build/install sequences.

0.2602 (Bug fix for 0.26)   Thu Nov  4 11:19:29 CST 2004

 - The two bug fixes in 0.2601 gnashed against each other incorrectly,
   resulting in a Win32 bug in split_like_shell().  Fixed.  [Spotted
   by Steve Hay & Randy Sims]

 - Removed a couple of 'use warnings' statements from the code - they
   were causing compile failures on 5.005_04, where warnings.pm isn't
   available. [Blair Zajac]

0.2601   (Bug fix for 0.26)   Wed Nov  3 20:09:27 CST 2004

 - Fixed some backslash problems with split_like_shell() on
   Win32. [Steve Hay]

 - Fixed a bug in split_like_shell() in which leading whitespace was
   creating an empty word, manifesting as something like "gcc - no
   such file or directory" during tests. [Spotted by Warren L. Dodge]

0.26  Sat Oct  9 17:51:01 CDT 2004

 - Removed some language from the Module::Build::Compat documentation
   that encouraged people to include a Build.PL without a Makefile.PL.
   Also changed "a replacement for MakeMaker" to "an alternative to
   MakeMaker" in the main documentation, which is basically what I
   meant all along (i.e. a replacement for MakeMaker in your
   particular build process - MakeMaker is never going to be fully
   replaced in the perl world at large, of course), but some people
   got the impression I was a little more truculent toward MakeMaker
   than I really am.

 - Added the formal concepts of "features" and "config data" for
   distributions.  This allows the module author to define a certain
   set of features that the user can switch on and off (usually
   according to whether they have the proper prerequisites for them),